# TheCherno-LearningOpenGL

./: .gitmodules  CMakeLists.txt  README.md
lib/: CMakeLists.txt
src/: CMakeLists.txt
src/practice/: LegacyTriangle.cpp  ModernTriangle.cpp
